--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 dist: xenial
 language: python
 python:
-  - '3.6'
+  # - '3.6'
   - '3.7'
 # env:
   # matrix:
@@ -16,6 +16,7 @@ addons:
   apt:
     packages:
       - httpie
+      - ansible
       - jq
   # postgres versions provided by el7 RHSCL (lowest supportable version)
   # TODO should this just use ansible role?
